--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ header {
 
 button {
   font-family: 'Amatic SC', cursive;
+  border-radius: 15px;
+  height: 40px;
+  font-size: 30px;
 }
 
 .container {
@@ -38,21 +41,23 @@ footer {
 }
 
 .disclaimer {
-  width: 300px;
+  opacity: 1;
+  width: 400px;
   padding: 10px;
-  background-color: indianred;
+  font-size: 25px;
+  background-color: plum;
   color: white;
   border: solid 1px black;
-  box-shadow: 0px 0px 5px yellow, 5px 5px 5px black;
+  box-shadow: 0px 0px 5px darkgrey, 5px 5px 5px black;
   position: absolute;
-  top: 40%;
-  left: 45%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
+  top: 20%;
+  left: 38%;
+  z-index: 1001;
 }
 
 .post_game_screen {
   opacity: 0;
+  z-index: 1001;
   width: 600px;
   height: 480px;
   border: solid, 1px, black;
@@ -61,8 +66,25 @@ footer {
   top: 12%;
   left: 32%;
   text-align: center;
-  box-shadow: 0px 0px 15px darkgrey, 15px 15px 15px black;
-  background-image: url(../pictures/mistake_06.png);
+  box-shadow: 0px 0px 20px white;
+  background-image: url(../pictures/mistake_00.png);
+  pointer-events: none;
+  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-size: contain;
+}
+
+.post_game_screen p {
+  color: red;
+  background-color: rgba(0, 0, 0, 0.8);
+  width: auto;
+  border-radius: 10px;
+}
+
+.post_game_screen button {
+  width: auto;
 }
 
 .keyboard_container button {
@@ -87,12 +109,33 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  font-size: x-large;
+  font-size: 30px;
   font-weight: bold;
 }
 
 .hint_container {
   display: flex;
   justify-content: center;
-  font-size: large;
+  font-size: 30px;
+}
+
+.instructions {
+  font-size: 30px;
+}
+
+#lightbox {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+}
+
+#lightbox.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
