--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,4 @@
-
+//link to github https://github.com/Calvinyuuu/final-project
 $primary_color_gradient:rgba(148,187,233,1);
 $secondary_color_gradient:rgba(238,174,202,1);
 
